--- a/style.css
+++ b/style.css
@@ -11,3 +11,26 @@ h1 {
 #myCanvas {
   background-color: #2a5;
 }
+
+button {
+  background-color: #2a5;
+  color: white;
+  font-family: Arial;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 8px 20px;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+button:hover {
+  background-color: #5c9;
+  transform: translateY(4px);
+}
+
+button:active {
+  background-color: #1c6;
+  transform: translateY(-2px);
+}
