--- a/style.css
+++ b/style.css
@@ -16,11 +16,12 @@ button {
   background-color: #2a5;
   color: white;
   font-family: Arial;
-  font-size: 17px;
+  font-size: 20px;
   font-weight: bold;
-  padding: 7px 20px;
+  padding: 5px 10px;
   border: none;
-  border-radius: 6px;
+  border-radius: 5px;
+  text-shadow: 1px 1px black;
   cursor: pointer;
   transition: all 0.3s ease;
 }
