--- a/style.css
+++ b/style.css
@@ -1,53 +1,33 @@
 body {
-  background-color: black;
-  text-align: center;
+  margin: 0;
+  background: darkgray;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-h1 {
-  color: white;
-  font-family: Arial;
+#verticalButtons {
+  display: flex;
+  flex-direction: column;
 }
 
-#myCanvas {
-  background-color: #2a5;
-}
-
-button,
-.file-input-label {
-  display: inline-block;
-  background-color: #2a5;
-  color: white;
-  font-family: Arial;
-  font-size: 20px;
-  font-weight: bold;
-  padding: 5px 10px;
+button {
   border: none;
   border-radius: 5px;
-  text-shadow: 1px 1px black;
+  padding: 5px 5px 7px 5px;
+  margin: 2px;
   cursor: pointer;
-  transition: all 0.3s ease;
 }
 
 button:hover {
-  background-color: #5c9;
-  transform: translateY(4px);
+  background: blue;
 }
 
-button:active {
-  background-color: #1c6;
-  transform: translateY(-1px);
+#networkCanvas {
+  background: black;
 }
 
-input[type="file"] {
-  display: none;
-}
-
-.file-input-label:hover {
-  background-color: #5c9;
-  transform: translateY(4px);
-}
-
-.file-input-label:active {
-  background-color: #1c6;
-  transform: translateY(-1px);
+#carCanvas {
+  background: lightgray;
 }
