Refactor Car class constructor and update canvas height

--- a/style.css
+++ b/style.css
@@ -29,5 +29,9 @@ button:hover {
 }
 
 #carCanvas {
-  background: lightgray;
+  background: #2a5;
+}
+
+#carCanvas:active {
+  cursor: all-scroll;
 }
