--- a/world/style.css
+++ b/world/style.css
@@ -1,6 +1,7 @@
 body {
   background-color: black;
   text-align: center;
+  overflow: hidden;
 }
 
 h1 {
@@ -54,4 +55,13 @@ input[type="file"] {
 .file-input-label:active {
   background-color: #1c6;
   transform: translateY(-1px);
+}
+
+#osmPanel {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 300px;
 }
