--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   background-color: black;
   text-align: center;
@@ -6,8 +12,21 @@ body {
 h1 {
   color: white;
   font-family: Arial, sans-serif;
+  margin: 1rem;
 }
 
 #myCanvas {
   background-color: #2a5;
+}
+
+button {
+  margin: 1rem;
+  font-size: 1rem;
+  padding: 0.3rem 1rem;
+  background-color: #2a5;
+  color: white;
+  font-weight: bold;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
