--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ h1 {
 }
 
 button {
-  margin: 1rem;
+  margin: 1rem 0.5rem;
   font-size: 1rem;
   padding: 0.3rem 1rem;
   background-color: #2a5;
