--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 h1 {
   color: white;
   font-family: Arial, sans-serif;
-  margin: 1rem;
+  margin: 0.8rem;
 }
 
 #myCanvas {
@@ -20,13 +20,21 @@ h1 {
 }
 
 button {
-  margin: 1rem 0.5rem;
-  font-size: 1rem;
-  padding: 0.3rem 1rem;
+  margin: 0.5rem 0.2rem 0 0.2rem;
+  font-size: 1.4rem;
+  padding: 0.3rem 0.5rem;
   background-color: #2a5;
-  color: white;
-  font-weight: bold;
   border: none;
-  border-radius: 5px;
+  border-radius: 6px;
   cursor: pointer;
+  transition: all 0.3s;
+}
+
+button:hover {
+  background-color: rgba(34, 170, 86, 0.8);
+}
+
+button:active {
+  background-color: rgba(34, 170, 86, 0.7);
+  transform: translateY(-2px);
 }
