--- a/style.css
+++ b/style.css
@@ -20,12 +20,13 @@ h1 {
 }
 
 button {
-  margin: 0.5rem 0.2rem 0 0.2rem;
-  font-size: 1.4rem;
-  padding: 0.3rem 0.5rem;
-  background-color: #2a5;
+  margin: 8px 3px 8px 3px;
+  font-size: 1.5rem;
+  padding: 5px 7px 5px 7px;
+  background-color: #22aa56e6;
   border: none;
   border-radius: 6px;
+  text-shadow: 2px 2px 6px black;
   cursor: pointer;
   transition: all 0.3s;
 }
