--- a/style.css
+++ b/style.css
@@ -19,7 +19,9 @@ h1 {
   background-color: #2a5;
 }
 
-button {
+button,
+.file-input-label {
+  display: inline-block;
   margin: 8px 3px 8px 3px;
   font-size: 1.5rem;
   padding: 5px 7px 5px 7px;
@@ -38,4 +40,8 @@ button:hover {
 button:active {
   background-color: rgba(34, 170, 86, 0.7);
   transform: translateY(-5px);
+}
+
+input[type="file"] {
+  display: none;
 }
